--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
           <div class="navbar-nav navbar-link">
-            <a class="nav-link" href="#">Contact</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link" href="#">Download</a>
+            <a class="nav-link" href="#features">Key-Features</a>
+            <a class="nav-link" href="#pricing">Our Pricing</a>
+            <a class="nav-link" href="#footer">Contact us</a>
           </div>
         </div>
     </nav> 
@@ -196,10 +196,10 @@
       </div>
 
     </div>
-    <i class="social-icon fab fa-facebook fa-2x" ></i>
-    <i class="social-icon fab fa-twitter fa-2x"  ></i>
-    <i class="social-icon fab fa-instagram fa-2x"></i>
-    <i class="social-icon fas fa-envelope fa-2x" ></i>
+    <a href="https://www.facebook.com/"><i class="social-icon fab fa-facebook fa-2x" ></i></a>
+    <a href="https://twitter.com/"><i class="social-icon fab fa-twitter fa-2x"  ></i></a>
+    <a href="https://www.instagram.com/"><i class="social-icon fab fa-instagram fa-2x"></i></a>
+    <a href="https://accounts.google.com/"><i class="social-icon fas fa-envelope fa-2x" ></i></a> 
 
     <p>© Copyright 2021 Getfriend</p>
 
